# SecureAggregation

./: .gitignore
kzh_fold/main/: Cargo.toml
kzh_fold/main/src/: lib.rs
main/: Cargo.toml
main/benches/: bench_nova.rs
main/src/: KAHE.rs  constant_curve.rs  constant_for_curves.rs  kahe.rs  lib.rs  main.rs  math.rs  poseidon.rs  util.rs
main/src/gadgets/: absorb.rs  mod.rs
main/src/gadgets/non_native/: mod.rs  non_native_affine_var.rs
main/src/gadgets/r1cs/: conversion.rs  mod.rs  ova.rs  r1cs.rs  r1cs_var.rs
main/src/hash/: mod.rs  pederson.rs  poseidon.rs
main/src/kzh/: kzh2.rs  kzh3.rs  mod.rs
main/src/kzh_fold/: eq_tree.rs  kzh2_fold.rs  kzh3_fold.rs  mod.rs
main/src/merkle_tree/: mod.rs
main/src/nexus_spartan/: commitment_traits.rs  mod.rs
main/src/nova/: mod.rs
main/src/nova/cycle_fold/: coprocessor.rs  coprocessor_constraints.rs  mod.rs  test.rs
main/src/nova/nova/: mod.rs  prover.rs  verifier_circuit.rs  verifier_circuit_var.rs
main/src/polynomial/: mod.rs
main/src/polynomial/eq_poly/: eq_poly.rs
main/src/polynomial/multilinear_poly/: mod.rs  multilinear_poly.rs
main/src/polynomial/univariate/: mod.rs  univariate.rs  univariate_var.rs
main/src/ring/: mod.rs
main/src/transcript/: transcript.rs  transcript_var.rs
main/src/univariate_poly/: mod.rs
secure_aggregation/: Cargo.toml
secure_aggregation/benches/: bench_mr.rs  bench_nova.rs  client_circuit.rs  proof_of_uniqueness.rs  server_circuit.rs
secure_aggregation/src/: constant_for_curves.rs  lib.rs  pederson.rs
secure_aggregation/src/client_circuit/: encryption.rs  (+2 more)
(+30 files in other folders)
