[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = "0.5.0"
ark-serialize = "0.5.0"  # If you need serialization support
ark-bn254 = "0.5.0"  # If you need pairing-based cryptography with the BN254 curve
rand = "0.9.0"
num = "0.4.3"  # Ensure this is the latest version
rand_distr = "0.5.1"
ark-std = "0.5.0"
ark-bls12-381 = "0.5.0"